# ngage-toolchain

./: .gitignore  .gitmodules  LICENSE.md  README.md  ngage-env.bat
.github/workflows/: nokia-ngage.yml
cmake/: EAudioLib.cmake  SDL.cmake  SDL12.cmake  SDL_epocruntime.cmake  SDLmain.cmake  cwalk.cmake  dbgprint.cmake  libtmx.cmake  libxml2.cmake  ngage-legacy-toolchain.cmake  ngage-toolchain-common.cmake  ngage-toolchain.cmake  ngagec++.bat  ngagec++.py  ngagecc.py  sdl-stub.cmake  snprintf.cmake  stdint.cmake  stub-eka2l1.cmake  stub-sdk.cmake  stub.cmake  symbian-6.1-series60-toolchain.cmake  zlib.cmake
cmake/Platform/: NGage.cmake
cmake/src/: settings.js  settings_internal.js
cmake/tools/: building.py  cache.py  colored_logger.py  config.py  diagnostics.py  filelock.py  link.py  response_file.py  settings.py  shared.py  toolchain_profiler.py  utils.py
cmake/tools/ports/: __init__.py
modules/: EAudioLib.cmake  SDL.cmake  SDL12.cmake  SDL_epocruntime.cmake  SDLmain.cmake  dbgprint.cmake  snprintf.cmake  stdint.cmake
projects/: .gitignore
projects/celeste/: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md
projects/celeste/cmake/: project_config.cmake
projects/celeste/media/: celeste-v1.03.sis
projects/celeste/res/: celeste.aifspec  celeste.mbm  celeste.pkg  celeste.rss  demo.aifspec  demo.mbm  demo.pkg  demo.rss
projects/celeste/src/: celeste.c  celeste.h  celeste_SDL3.c  celeste_SDL3.h  fixedp.h  main.c  ngage.cpp  ngage_application.cpp  ngage_appui.cpp  tilemap.h
projects/demo/: CMakeLists.txt  CMakeSettings.json
projects/demo/cmake/: project_config.cmake
projects/demo/res/: demo.pkg  launcher.aifspec  launcher.pkg  launcher.rss
projects/demo/src/: celeste.c  fixedp.cpp  main.c  main.cpp  ngage_application.h  ngage_appui.cpp  ngage_appui.h  ngage_appview.cpp  ngage_appview.h  ngage_document.cpp  ngage_document.h
projects/minimal/: CMakeLists.txt  README.md
projects/minimal/src/: main.c  main.cpp  main.h
projects/template/: CMakeLists.txt  CMakeSettings.json  README.md
projects/template/cmake/: project_config.cmake
projects/template/res/: game.pkg  template.aifspec  template.rss
projects/template/src/: main.c  ngage.cpp  ngage_application.cpp  ngage_application.h  ngage_appui.cpp  ngage_appui.h  ngage_appview.cpp  ngage_appview.h  ngage_document.cpp  ngage_document.h
projects/v2demo/: CMakeLists.txt  README.md
projects/v2demo/cmake/: project_config.cmake
projects/v2demo/src/: main.c  main.cpp
sdk/: .gitignore  ngagesdk_entry.cpp
sdk/tools/: packer.cpp
setup/: .gitignore  CMakeLists.txt  CMakeSettings.json  LICENSE.md  README.md  setup.cmake  setup.cmd  setup.sh
utils/: FExplorer_1.17.sis  Hotswap.sis
